refactor : 예약 조회 기능 수정